# airbnb-spider

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  scrapy.cfg  setup.cfg
.github/workflows/: test.yml
airbnb/: chart.py  convert.py  data.py  listings_chart.py  listings_graph.py  per_city_chart.py  per_city_data.py  per_city_graph.py  prices_chart.py  prices_graph.py
airbnb_spider/: items.py  middlewares.py  pipelines.py  run_spider.py  settings.py
airbnb_spider/lib/: airbnb_spider.py  get_prices_request.py  listing_request.py  middlewares.py  params.py  pipelines.py  place.py  request.py  utils.py
airbnb_spider/spiders/: airbnb.py  bbox.py  constants.py  filters.py  get_prices_request.py  listing_request.py  middlewares.py  place.py  request.py  utils.py
dash_app/: app.py  data.py  utils.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
experiments/: StaysPdpSections1.http  StaysPdpSections1.json  StaysPdpSections2.http  StaysPdpSections2.json  requests.http  rnd.ipynb
run_on_ec2/: .env.op  Makefile  ec2_instance.yaml  userdata_template.sh
streamlit_app/: app.py
streamlit_app/pages/: 1_Dataframe.py  2_Listings.py  3_Per city dataframe.py  test.py
tests/test_example/: test_some_function.py
web/: app.py  convert.py  data.py
