[tool.poetry]
name = "airbnb-spider"
description = "This is how python package should look like!"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/aljeshishe/airbnb-spider"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<4,!=3.9.7"
scrapy = "^2.7.1"
treq = "^22.2.0"
jsonpath-ng = "^1.5.3"
attrs = "^22.1.0"
numpy = "^1.24.0"
pandas = "^1.5.2"
tqdm = "^4.64.1"
dash = "^2.8.0"
plotly = "^5.11.0"
flask-compress = "^1.13"
streamlit = "^1.16.0"
watchdog = "^2.2.0"
streamlit-plotly-events = "^0.0.6"
rootpath = "^0.1.1"
pandas-utils = {git = "https://github.com/aljeshishe/pandas_utils.git", develop = true}
dtale = "^2.10.0"

[tool.poetry.group.test.dependencies]
mypy = "^0.982"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
doc8 = "^1.0"
nitpick = "^0.32"

safety = "^2.3"

pytest = "^7.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.2"
sphinx-autodoc-typehints = "^1.19"
m2r2 = "^0.3"
tomli = "^2.0"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
